Aggiunto Shared-Library e abilitato CSRF + parziale refactor del BackEnd (Shared-Library aggiunto correttamente)