@@ -1,65 +1,98 @@
 package com.dietiestates25backend.data.config;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
+import com.dietiestates25backend.business.service.JwtService;
+
 import java.util.Arrays;
 import java.util.List;
-
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-    @Autowired
-    private OAuth2SuccessHandler oAuth2SuccessHandler;
-
-
-
     private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class);
+
+    private final OAuth2SuccessHandler oAuth2SuccessHandler;
+    private final JwtService jwtService;
+    private final ApplicationContext applicationContext;
+
+    @Autowired
+    public SecurityConfig(OAuth2SuccessHandler oAuth2SuccessHandler, JwtService jwtService, ApplicationContext applicationContext) {
+        this.oAuth2SuccessHandler = oAuth2SuccessHandler;
+        this.jwtService = jwtService;
+        this.applicationContext = applicationContext;
+    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        logger.debug("Request received: {}", http.toString());
+        logger.debug("Request received: {}", http);
         logger.info("Configuring security filters...");
-        http
-                .csrf(AbstractHttpConfigurer::disable)
-                .authorizeHttpRequests(authz -> authz
-                        .requestMatchers("/api/users/register", "/api/users/login").permitAll()
-                        .anyRequest().authenticated()
-                ).oauth2Login(oauth2 -> oauth2
-                        .loginPage("/login").permitAll()
-                        .successHandler(oAuth2SuccessHandler)
-                )
-                .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()));
+
+        // Abilita CSRF Protection
+        http.csrf(csrf -> {
+            CookieCsrfTokenRepository tokenRepository = CookieCsrfTokenRepository.withHttpOnlyFalse();
+            tokenRepository.setCookieName("XSRF-TOKEN"); // Imposta il nome del cookie
+            csrf.csrfTokenRepository(tokenRepository);
+            csrf.csrfTokenRequestHandler(new CsrfTokenRequestAttributeHandler());
+        });
+
+        http.authorizeHttpRequests(authz -> authz
+                .requestMatchers("/api/users/register", "/api/users/login", "/api/csrf").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/public/**").permitAll()
+                .anyRequest().authenticated()
+        );
+
+        http.oauth2Login(oauth2 -> oauth2
+                .loginPage("/login").permitAll()
+                .successHandler(oAuth2SuccessHandler)
+        );
+
+        http.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
+
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
+
+        http.sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+        );
+
         logger.info("Security filters configured.");
         return http.build();
     }
 
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        //consenti solo richieste dal tuo frontend
-        configuration.setAllowedOrigins(List.of("http://localhost:8000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Metodi consentiti
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Header consentiti
-        configuration.setAllowCredentials(true); // Permetti credenziali (es. cookie) se necessario
+        configuration.setAllowedOrigins(List.of("http://localhost:8000"));//TODO: FIX ME
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-CSRF-TOKEN"));
+        configuration.setExposedHeaders(Arrays.asList("X-CSRF-TOKEN"));
+        configuration.setAllowCredentials(true);
         logger.debug("CORS configuration: {}", configuration.getAllowedOrigins());
+        logger.debug("CORS allowed methods: {}", configuration.getAllowedMethods());
+        logger.debug("CORS allowed headers: {}", configuration.getAllowedHeaders());
+        logger.debug("CORS allow credentials: {}", configuration.getAllowCredentials());
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Configura per tutti gli endpoint
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
@@ -70,6 +103,7 @@ public class SecurityConfig {
 
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter(){
-        return new JwtAuthenticationFilter();
+        UserDetailsService userDetailsService = applicationContext.getBean(UserDetailsService.class);
+        return new JwtAuthenticationFilter(jwtService, userDetailsService);
     }
 }
